# aws-iot-robot-connectivity-samples-ros2

./: .gitignore  README.md
.github/workflows/: main.yml
templates/: cwl_role_permissions_template.json  cwl_role_trust.json  iot_config_template.json  iot_policy_template.json  shadow_policy_template.json
workspace/src/cmd_vel_republisher/: package.xml  setup.cfg  setup.py
workspace/src/cmd_vel_republisher/cmd_vel_republisher/: republish_cmd_vel.py
workspace/src/iot_cloudwatch_logs/: package.xml  setup.cfg  setup.py
workspace/src/iot_cloudwatch_logs/iot_cloudwatch_logs/: republish_to_cloudwatch.py
workspace/src/iot_shadow_service/: package.xml  setup.cfg  setup.py
workspace/src/iot_shadow_service/iot_shadow_service/: digit_generator.py  iot_shadow_node.py  safe_cracker.py
workspace/src/iot_shadow_service/launch/: crack_safe.yaml
workspace/src/iot_shadow_service_msgs/: CMakeLists.txt  package.xml
workspace/src/iot_shadow_service_msgs/msg/: ShadowUpdateSnapshot.msg
workspace/src/iot_shadow_service_msgs/srv/: UpdateShadow.srv
workspace/src/telemetry_mqtt/: package.xml  setup.cfg  setup.py
workspace/src/telemetry_mqtt/telemetry_mqtt/: connection_helper.py  mock_telemetry_publisher.py  mqtt_telemetry_publisher.py
